--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#339146</color>
     <color name="colorPrimaryDark">#22772c</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#34ce65</color>
+    <color name="textColor">#ffffff</color>
+    <color name="redButton">#d62d2d</color>
 </resources>
