--- a/app/src/main/res/layout/activity_worker_assign.xml
+++ b/app/src/main/res/layout/activity_worker_assign.xml
@@ -1,32 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
-    tools:context=".activity.LoginActivity">
+    tools:context=".activity.WorkerAssignActivity"
+    android:padding="10dp">
 
-    <TextView
+    <ListView
+        android:id="@+id/listViewProcess"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:text="HOURLY PRODUCTIVITY APP"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Supervisor ID"
-        android:inputType="number" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Style No/ID" />
+        android:layout_height="450dp"></ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,7 +32,7 @@
             android:layout_marginTop="20dp"
             android:layout_weight="0.5"
             android:background="@color/redButton"
-            android:onClick="cancelProcess"
+            android:onClick="cancelWorkerAssign"
             android:text="Exit"
             android:textColor="@color/textColor" />
 
@@ -58,7 +43,7 @@
             android:layout_marginTop="20dp"
             android:layout_weight="0.5"
             android:background="@color/colorPrimary"
-            android:onClick="continueProcess"
+            android:onClick="continueWorkerAssign"
             android:text="Continue"
             android:textColor="@color/textColor" />
     </LinearLayout>
