--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/main_menu"
         android:icon="@drawable/menu"
-        android:title="Main Manu"
-        app:showAsAction="ifRoom" />
+        android:title="Main Manu" />
     <item android:id="@+id/save"
         android:icon="@drawable/save"
         android:title="Save" />
