--- a/app/src/main/res/layout/activity_worker_assign.xml
+++ b/app/src/main/res/layout/activity_worker_assign.xml
@@ -1,35 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.WorkerAssignActivity"
-    android:padding="10dp">
+    android:padding="10dp"
+    tools:context=".activity.WorkerAssignActivity">
 
-    <ListView
-        android:id="@+id/listViewProcess"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"></ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/processName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Process Name"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/machineType"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Machine Type"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:inputType="textMultiLine"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/hourlyTarget"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Hourly\nTarget"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/workerId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Assign\nWorker Id"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:layout_weight="1.5"/>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listViewProcess"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9"></ListView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Extra"
-            android:visibility="gone" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="0.5"
             android:background="@color/redButton"
             android:onClick="cancelWorkerAssign"
@@ -40,7 +79,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="0.5"
             android:background="@color/colorPrimary"
             android:onClick="continueWorkerAssign"
