--- a/app/src/main/res/layout/worker_assign_custom_layout.xml
+++ b/app/src/main/res/layout/worker_assign_custom_layout.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/processName"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
     <TextView
         android:id="@+id/machineType"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:layout_weight="1" />
+
     <TextView
         android:id="@+id/hourlyTarget"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
     <EditText
         android:id="@+id/workerId"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1.5"
-        android:hint="Worker ID"
-        android:layout_height="wrap_content" />
+        android:hint="Worker ID" />
 </LinearLayout>
