--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-<!--    <ImageView
+    <ImageView
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/logo"/>-->
+        android:src="@drawable/logo"/>
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ENTER THE APP"
-        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:padding="20dp"
         android:layout_margin="20dp"
