Server side integration

--- a/app/src/main/res/layout/fragment_hourly_production.xml
+++ b/app/src/main/res/layout/fragment_hourly_production.xml
@@ -5,38 +5,10 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <EditText
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Working Hour" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Worker ID" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Worker Name" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Process Name" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Cutting Serial" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/textColor"
-        android:layout_gravity="center"/>
-
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
