--- a/app/src/main/res/layout/worker_assign_custom_layout.xml
+++ b/app/src/main/res/layout/worker_assign_custom_layout.xml
@@ -2,32 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="5dp">
 
-    <TextView
-        android:id="@+id/processName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/machineType"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:layout_weight="1" />
+        <TextView
+            android:id="@+id/processName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2" />
 
-    <TextView
-        android:id="@+id/hourlyTarget"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        <TextView
+            android:id="@+id/machineType"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.75"
+            android:inputType="textMultiLine" />
 
-    <EditText
-        android:id="@+id/workerId"
-        android:layout_width="0dp"
+        <TextView
+            android:id="@+id/hourlyTarget"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.75"
+            android:inputType="number" />
+
+        <AutoCompleteTextView
+            android:id="@+id/workerId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.25"
+            android:hint="Worker ID"
+            android:inputType="number" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonSaveWorkerAssign"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:hint="Worker ID" />
+        android:text="SAVE"
+        android:visibility="gone"
+        android:layout_gravity="right"/>
 </LinearLayout>
