--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -24,11 +25,16 @@
         android:hint="Supervisor ID"
         android:inputType="text" />
 
-    <EditText
+    <!--<EditText
         android:id="@+id/editTextStyleId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Style No/ID" />
+        android:hint="Style No/ID" />-->
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerLine"></Spinner>
 
     <LinearLayout
         android:layout_width="match_parent"
