--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -22,7 +22,7 @@
             android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
-        <Button
+       <!-- <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
@@ -30,17 +30,17 @@
             android:onClick="addStyle"
             android:text="Add New Style"
             android:textColor="@color/textColor"
-            android:visibility="gone" />
+            android:visibility="gone" />-->
     </LinearLayout>
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="200dp">
+        android:layout_height="wrap_content">
         <de.codecrafters.tableview.TableView
             xmlns:table="http://schemas.android.com/apk/res-auto"
             android:id="@+id/tableViewReport"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             table:tableView_columnCount="7" />
     </HorizontalScrollView>
 
