--- a/app/src/main/res/layout/receycler_view_item.xml
+++ b/app/src/main/res/layout/receycler_view_item.xml
@@ -15,29 +15,30 @@
         android:id="@+id/workerId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Worker ID"
         android:padding="5dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:hint="Worker ID" />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <TextView
         android:id="@+id/workerName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Worker Name"
         android:padding="5dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:hint="Worker Name" />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <TextView
         android:id="@+id/processName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Process Name"
         android:padding="5dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:hint="Process Name" />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/cuttingSlNo"
@@ -55,6 +56,12 @@
             android:hint="Cutting Serial End"
             android:inputType="text" />
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/hourlyOutput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Hourly Output"/>
 
     <Button
         android:id="@+id/saveIndividualEntry"
