--- a/app/src/main/res/layout/fragment_input_output.xml
+++ b/app/src/main/res/layout/fragment_input_output.xml
@@ -16,12 +16,14 @@
         android:id="@+id/editTextInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Input" />
+        android:hint="Input"
+        android:inputType="number"/>
 
     <EditText
         android:id="@+id/editTextOutput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:hint="Line output" />
 
     <EditText
