--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayoutReport"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ReportActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".activity.ReportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,22 +23,22 @@
             android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
-       <!-- <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:background="@color/colorPrimary"
-            android:onClick="addStyle"
-            android:text="Add New Style"
-            android:textColor="@color/textColor"
-            android:visibility="gone" />-->
+        <!-- <Button
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:layout_weight="4"
+             android:background="@color/colorPrimary"
+             android:onClick="addStyle"
+             android:text="Add New Style"
+             android:textColor="@color/textColor"
+             android:visibility="gone" />-->
     </LinearLayout>
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <de.codecrafters.tableview.TableView
-            xmlns:table="http://schemas.android.com/apk/res-auto"
+
+        <de.codecrafters.tableview.TableView xmlns:table="http://schemas.android.com/apk/res-auto"
             android:id="@+id/tableViewReport"
             android:layout_width="match_parent"
             android:layout_height="300dp"
