--- a/app/src/main/res/layout/dialog_layout_line_input.xml
+++ b/app/src/main/res/layout/dialog_layout_line_input.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Total Line Output"
+        android:hint="Total Line Target"
         android:inputType="number"/>
 
     <EditText
